--- a/readthedocsext/theme/templates/projects/integration_list.html
+++ b/readthedocsext/theme/templates/projects/integration_list.html
@@ -1,15 +1,21 @@
 {% extends "projects/project_edit_base.html" %}
 
-{% load i18n %}
+{% load trans from i18n %}
 
-{% block title %}{{ project.name }} - {% trans "Integrations" %}{% endblock %}
+{% block title %}
+  {{ project.name }} - {% trans "Integrations" %}
+{% endblock title %}
 
-{% block project_integrations_active %}active{% endblock %}
-{% block project_edit_content_header %}{% trans "Integrations" %}{% endblock %}
+{% block project_integrations_active %}
+  active
+{% endblock project_integrations_active %}
+{% block project_edit_content_header %}
+  {% trans "Integrations" %}
+{% endblock project_edit_content_header %}
 
 {% block project_edit_content %}
-  {% include "projects/partials/edit/integration_list.html" with objects=object_list %}
-{% endblock %}
+  {% include "projects/partials/edit/integration_list.html" with objects=subclassed_object_list %}
+{% endblock project_edit_content %}
 
 {% block project_edit_sidebar_help_topics %}
   {% include "includes/elements/link.html" with url="https://docs.readthedocs.io/page/guides/connecting-git-account.html" text="How to connect your Read the Docs account to your Git provider" is_external=True class="item" %}
