Handle `last_login_method` and `login_tab`
Show a "Last used" tooltip on each of the buttons

--- a/readthedocsext/theme/templates/account/login.html
+++ b/readthedocsext/theme/templates/account/login.html
@@ -16,18 +16,6 @@
   {% endif %}
 {% endblock content_title_text %}
 
-{% block head_scripts %}
-  {{ block.super }}
-
-  <script type="text/javascript">
-  // TODO: where should we put this code?
-  const last_login_method = "{{ last_login_method }}";
-  if (window.location.pathname == "/accounts/login/" && last_login_method == "email") {
-    history.pushState({}, "", "#/email/");
-  }
-  </script>
-{% endblock head_scripts %}
-
 {% block content_body %}
   {% get_providers as socialaccount_providers %}
 
@@ -42,8 +30,9 @@
       </div>
     </div>
 
-    <div class="ui small stackable teal centered fluid wrapping menu"
-         data-bind="semanticui: {tabs: {history: true, autoTabActivation: false}}">
+    <div class="ui small stackable teal centered fluid wrapping menu" data-bind="semanticui: {tabs: {
+      {% if login_tab %}autoTabActivation: '{{ login_tab }}'{% endif %}
+      }}">
 
       <a class="item" data-tab="vcs">
         <i class="fas fa-cloud icon"></i>
@@ -54,7 +43,7 @@
 
       {# If allowed providers is given, disable the email menu item #}
       <a class="{% if allowed_providers %}disabled{% endif %} item"
-         {% if last_login_method == "email" %} data-tooltip="Last used" data-variation="teal visible" data-position="top center" {% endif %}
+         {% if login_tab == "email" %} data-tooltip="Last used" data-variation="teal visible" data-position="top center" {% endif %}
          data-tab="email">
         <i class="fas fa-envelope icon"></i>
         {% block authentication_email_text %}
@@ -63,8 +52,7 @@
       </a>
 
       {% if USE_ORGANIZATIONS %}
-        <a class="item"
-           href="{% url "saml_resolve_login" %}{% if redirect_field_value %}?{{ redirect_field_name }}={{ redirect_field_value }}{% endif %}">
+        <a class="item" data-tab="sso">
           <i class="fas fa-shield-alt icon"></i>
           {% trans "Single sign-on" %}
         </a>
@@ -120,6 +108,21 @@
       </form>
     {% endblock authentication_email %}
   </div>
+
+  {% if USE_ORGANIZATIONS %}
+    <div class="ui basic center aligned tab segment" data-tab="sso">
+      <a href="{% url "saml_resolve_login" %}{% if redirect_field_value %}?{{ redirect_field_name }}={{ redirect_field_value }}{% endif %}">
+
+        <button class="ui button"
+                type="submit"
+                {% if last_login_method == "sso" %} data-tooltip="Last used" data-variation="teal visible" data-position="right center" {% endif %}
+                title="Single sign-on">
+          <i class="fas fa-shield-alt icon" aria-hidden="true"></i>
+          {% trans "Log in using single sign-on" %}
+        </button>
+      </a>
+    </div>
+  {% endif %}
 
   {% block authentication_extra %}
   {% endblock authentication_extra %}
