Bring back the beta label

--- a/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
+++ b/readthedocsext/theme/templates/socialaccount/snippets/provider_list.html
@@ -53,6 +53,7 @@
                     {% blocktrans trimmed %}
                       Our GitHub App
                     {% endblocktrans %}
+                    <span class="ui violet compact small basic label">Beta</span>
                   {% endif %}
                 </div>
                 <div class="description">
