Redirect: syntax highlight for `$variable`
Closes #82

--- a/readthedocsext/theme/templates/projects/redirect_form.html
+++ b/readthedocsext/theme/templates/projects/redirect_form.html
@@ -27,13 +27,13 @@
             <div class="sub header">
               {% trans "Redirect from" %}
             </div>
-            <code data-bind="text: redirect_from"></code>
+            <code data-bind="html: redirect_from"></code>
           </div>
           <div class="item">
             <div class="sub header">
               {% trans "Redirect to" %}
             </div>
-            <code data-bind="text: redirect_to"></code>
+            <code data-bind="html: redirect_to"></code>
           </div>
         </div>
       </div>
