--- a/readthedocsext/theme/templates/projects/redirect_form.html
+++ b/readthedocsext/theme/templates/projects/redirect_form.html
@@ -1,8 +1,8 @@
 {% extends "projects/redirect_list.html" %}
 
-{% load i18n %}
-{% load crispy_forms_tags %}
-{% load ext_theme_tags %}
+{% load trans from i18n %}
+{% load crispy from crispy_forms_tags %}
+{% load alter_field from ext_theme_tags %}
 
 {% block project_edit_content_subheader %}
   {% if object %}
@@ -10,30 +10,34 @@
   {% else %}
     {% trans "Add redirect" %}
   {% endif %}
-{% endblock %}
+{% endblock project_edit_content_subheader %}
 
 {% block project_edit_content %}
-  <form class="ui form" method="post" action="." data-bind="using: ProjectRedirectView()">
+  <form class="ui form"
+        method="post"
+        action="."
+        data-bind="using: ProjectRedirectView()">
     {% csrf_token %}
     {% alter_field form.redirect_type data_bind="valueInit: redirect_type" %}
     {% alter_field form.from_url data_bind="valueInit: from_url, textInput: from_url, enable: is_from_url_visible" %}
     {% alter_field form.to_url data_bind="valueInit: to_url, textInput: to_url, enable: is_to_url_visible" %}
     {{ form|crispy }}
 
-    <div class="ui disabled segment" data-bind="css: {disabled: is_example_disabled}">
-      <div data-bind="visible: !is_example_disabled()" style="display: none;">
+    <div class="ui disabled segment"
+         data-bind="css: {disabled: is_example_disabled}">
+      <div class="ko hidden" data-bind="css: {hidden: is_example_disabled()}">
         <div class="ui list">
           <div class="item">
-            <div class="sub header">
-              {% trans "Redirect from" %}
-            </div>
-            <code data-bind="text: redirect_from"></code>
+            <div class="sub header">{% trans "Redirect from" %}</div>
+            <code>
+              <span data-bind="html: redirect_from_prefix"></span><span data-bind="text: redirect_from"></span>
+            </code>
           </div>
           <div class="item">
-            <div class="sub header">
-              {% trans "Redirect to" %}
-            </div>
-            <code data-bind="text: redirect_to"></code>
+            <div class="sub header">{% trans "Redirect to" %}</div>
+            <code>
+              <span data-bind="html: redirect_to_prefix"></span><span data-bind="text: redirect_to"></span>
+            </code>
           </div>
         </div>
       </div>
@@ -41,4 +45,4 @@
 
     <input class="ui primary button" type="submit" value="{% trans "Save" %}">
   </form>
-{% endblock %}
+{% endblock project_edit_content %}
