--- a/readthedocsext/theme/templates/projects/partials/project_list.html
+++ b/readthedocsext/theme/templates/projects/partials/project_list.html
@@ -52,7 +52,7 @@
 {% block list_item_header %}
   <a href="{% url "projects_detail" object.slug %}">{{ object.name }}</a>
   <div class="sub header">
-    {% with build=object.get_latest_build %}
+    {% with build=object.latest_internal_build %}
       {% if build %}
         <time data-content="{{ build.date }}">
           {% if build.finished %}
@@ -78,7 +78,7 @@
 {% endblock list_item_meta %}
 
 {% block list_item_extra_items %}
-  {% with build=object.get_latest_build %}
+  {% with build=object.latest_internal_build %}
     {% if build %}
       {% include "includes/elements/chips/build.html" with project=object build=build %}
     {% endif %}
