--- a/readthedocsext/theme/templates/core/project_list_detailed.html
+++ b/readthedocsext/theme/templates/core/project_list_detailed.html
@@ -6,18 +6,22 @@
 
     {% with project.users.all as users %}
       {% if users|length > 1 %}
-        ({% for user in project.users.all|slice:":3" %}
+        (
+        {% for user in project.users.all|slice:":3" %}
           {% if omit and user.pk != omit.pk %}
             <a href="{{ user.get_absolute_url }}">{{ user }}</a>
           {% endif %}
           {% if not omit %}
             <a href="{{ user.get_absolute_url }}">{{ user }}</a>
           {% endif %}
-        {% endfor %})
+        {% endfor %}
+        )
       {% else %}
-        {% if omit and users.0.pk == omit.pk %}{% else %}{% with project.users.all.0 as user %}
-          (<a href="{{ user.get_absolute_url }}">{{ user }}</a>)
-        {% endwith %}
+        {% if omit and users.0.pk == omit.pk %}
+        {% else %}
+          {% with project.users.all.0 as user %}
+            (<a href="{{ user.get_absolute_url }}">{{ user }}</a>)
+          {% endwith %}
         {% endif %}
       {% endif %}
     {% endwith %}
