Rename get_latest_build -> latest_internal_build (#639)
Matches https://github.com/readthedocs/readthedocs.org/pull/12400

--- a/readthedocsext/theme/templates/core/project_list_detailed.html
+++ b/readthedocsext/theme/templates/core/project_list_detailed.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load trans blocktrans from i18n %}
 
 {% for project in project_list %}
   <li class="item">
@@ -6,24 +6,28 @@
 
     {% with project.users.all as users %}
       {% if users|length > 1 %}
-        ({% for user in project.users.all|slice:":3" %}
+        (
+        {% for user in project.users.all|slice:":3" %}
           {% if omit and user.pk != omit.pk %}
             <a href="{{ user.get_absolute_url }}">{{ user }}</a>
           {% endif %}
           {% if not omit %}
             <a href="{{ user.get_absolute_url }}">{{ user }}</a>
           {% endif %}
-        {% endfor %})
+        {% endfor %}
+        )
       {% else %}
-        {% if omit and users.0.pk == omit.pk %}{% else %}{% with project.users.all.0 as user %}
-          (<a href="{{ user.get_absolute_url }}">{{ user }}</a>)
-        {% endwith %}
+        {% if omit and users.0.pk == omit.pk %}
+        {% else %}
+          {% with project.users.all.0 as user %}
+            (<a href="{{ user.get_absolute_url }}">{{ user }}</a>)
+          {% endwith %}
         {% endif %}
       {% endif %}
     {% endwith %}
 
     {% if project.has_good_build %}
-      <span>{% blocktrans with date=project.get_latest_build.date|timesince %}{{ date }} ago{% endblocktrans %}</span>
+      <span>{% blocktrans with date=project.latest_internal_build.date|timesince %}{{ date }} ago{% endblocktrans %}</span>
     {% else %}
       <span>{% trans "No builds" %}</span>
     {% endif %}
@@ -37,8 +41,6 @@
         {% endif %}
       </li>
     </ul>
-
-
   </li>
 {% empty %}
   <li class="item">{% trans "No projects found" %}</li>
