--- a/readthedocsext/theme/templates/includes/crud/pagination.html
+++ b/readthedocsext/theme/templates/includes/crud/pagination.html
@@ -1,10 +1,9 @@
-{% load i18n %}
-
 {% if is_paginated %}
-  <div class="ui pagination menu">
+  <div class="ui pagination wrapping menu">
 
     {% if page_obj.has_previous %}
-      <a class="icon item" href="?page{{ page_suffix }}={{ page_obj.previous_page_number }}{{ getvars }}"><i class="fa-solid fa-arrow-left icon"></i></a>
+      <a class="icon item"
+         href="?page{{ page_suffix }}={{ page_obj.previous_page_number }}{{ getvars }}"><i class="fa-solid fa-arrow-left icon"></i></a>
     {% else %}
       <a class="disabled icon item"><i class="fa-solid fa-arrow-left icon"></i></a>
     {% endif %}
@@ -16,7 +15,8 @@
             <div class="active item">{{ page }}</div>
           {% else %}
             {% if disable_link_for_first_page and page == 1 %}
-              <a href="{{ request.path }}{% if getvars %}?{{ getvars|slice:"1:" }}{% endif %}" class="item">{{ page }}</a>
+              <a href="{{ request.path }}{% if getvars %}?{{ getvars|slice:"1:" }}{% endif %}"
+                 class="item">{{ page }}</a>
             {% else %}
               <a href="?page{{ page_suffix }}={{ page }}{{ getvars }}" class="item">{{ page }}</a>
             {% endif %}
@@ -28,7 +28,8 @@
     {% endif %}
 
     {% if page_obj.has_next %}
-      <a class="icon item" href="?page{{ page_suffix }}={{ page_obj.next_page_number }}{{ getvars }}"><i class="fa-solid fa-arrow-right icon"></i></a>
+      <a class="icon item"
+         href="?page{{ page_suffix }}={{ page_obj.next_page_number }}{{ getvars }}"><i class="fa-solid fa-arrow-right icon"></i></a>
     {% else %}
       <a class="disabled icon item"><i class="fa-solid fa-arrow-right icon"></i></a>
     {% endif %}
