--- a/readthedocsext/theme/templates/builds/build_detail.html
+++ b/readthedocsext/theme/templates/builds/build_detail.html
@@ -244,7 +244,9 @@
                 <code class="ui text"
                       data-bind="text: command, class: command_class, click: toggle_expanded"></code>
                 <a class="ui mini inverted label"
-                   data-bind="text: '{% trans "Running" %}', visible: !finished()"></a>
+                   data-bind="text: '{% trans "Running" %}', visible: !finished() && !$parent.is_finished()"></a>
+                <a class="ui mini inverted label"
+                   data-bind="text: '{% trans "Incomplete" %}', visible: !finished() && $parent.is_finished()"></a>
                 <a class="ui mini inverted label"
                    data-bind="text: run_time() + 's', visible: finished()"></a>
                 <a class="ui mini inverted label"
